# vibecoding-homework

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  HOMEWORK_BRIEF.md  README.md  bootstrap.sh
.claude/: settings.json
.claude/agents/: agent-sdk-builder.md  backend-architect.md  db-modeler.md  frontend-builder.md  mcp-integrator.md  prompt-engineer-cs.md  schema-designer.md  test-writer.md
.claude/skills/agent-handoff-contracts/: SKILL.md
.claude/skills/czech-llm-output/: SKILL.md
.claude/skills/pantry-first-meal-planning/: SKILL.md
examples/: 01-subagent-dispatch.md  02-skill-invocation.md  03-mcp-tool-call.md
mcp_servers/rohlik_promo/: README.md  pyproject.toml  server.py
