[project]
name = "rohlik-promo-mcp"
version = "0.1.0"
description = "Custom MCP server pro mock Rohlik promotions a cart sync (homework demo pre NutriFlow)"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
